--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,72 @@
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.panel {
+    overflow: hidden;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.split-handle {
+    width: 3px;
+    background: #444;
+    cursor: col-resize;
+    user-select: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.popup-overlay {
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    backdrop-filter: blur(5px);
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.card {
-  padding: 2em;
+.popup {
+    height: 80%;
+    width: 80%;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    background-color: #131313;
+    border-radius: 15px;
 }
 
-.read-the-docs {
-  color: #888;
+#app-panel {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    gap: 1em;
+}
+
+.iconButton {
+    width: 48px;
+    height: 48px;
+    font-size: 1em;
+    background-color: transparent;
+    border: none;
+}
+
+.iconButton:hover {
+    cursor: pointer;
+}
+
+.iconButton.active {
+    color: green;
+}
+
+.textButton {
+    height: 50%;
+    background-color: red;
 }
