--- a/frontend/src/components/MenuBar.css
+++ b/frontend/src/components/MenuBar.css
@@ -5,9 +5,9 @@
   color: white;
 }
 
-.seperator {
+.separator {
     margin: 2em 0em;
     width: 80%;
     height: 1px;
-    background-color: rgba(255, 255, 255, 0.25);
+    background-color: var(--dark-grey);
 }
