--- a/src/App.css
+++ b/src/App.css
@@ -9,5 +9,16 @@
   height: 100%;
   display: flex;
   flex-direction: row;
-  background-color: red;
+  overflow: hidden;
+}
+
+#overlay {
+  margin: 1em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  gap: 2px;
+  right: 0;
 }
