--- a/src/components/Viewport.css
+++ b/src/components/Viewport.css
@@ -3,3 +3,9 @@
     width: 100%;
     background-color: #0A0A0A;
 }
+
+#canvas {
+    height: 100%;
+    width: 100%;
+    background-color: #0A0A0A;
+}
