--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,66 @@
   gap: 2px;
   right: 0;
 }
+
+#home-view {
+  width: 100%;
+  height: 100%;
+}
+
+#context-selector {
+  background-color: #131313;
+  border-radius: 16px;
+  max-width: 90%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#context-selector #header {
+  margin: 0.5em;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  width: calc(100% - 1em);
+}
+
+#context-options {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+  margin: 2em;
+  margin-top: 1em;
+}
+
+.contextButton {
+  background-color: transparent;
+  color: white;
+  transition: border ease 0.25s, color ease 0.2s;
+  display: flex;              /* use flexbox */
+  flex-direction: column;
+  align-items: center;        /* vertical centering */
+  justify-content: center;    /* horizontal centering */
+  height: 5em;               /* button height */
+  width: 5em;
+  border: solid #333 1px;
+  border-radius: 16px;         /* optional rounded corners */
+  font-size: 36px;            /* icon size */
+}
+
+.contextButton:hover {
+    color: var(--primary);
+    cursor: pointer;
+    border-color: var(--primary);
+}
+
+.contextButton .label {
+  font-size: 18px;
+}
+
+.contextButton .description {
+  font-size: 12px;
+}
