--- a/src/components/MotionClipDropdown.css
+++ b/src/components/MotionClipDropdown.css
@@ -9,15 +9,22 @@
     border-radius: 16px;
     background-color: #131313;
     transition: border 0.25s ease, color 0.25s ease;
+    border: solid 1px #333;
 }
 
 .dropdown #select:hover {
     border-color: var(--primary);
     color: var(--primary);
+    outline: none;
 }
 
 .dropdown #select.open {
     border-radius: 16px 16px 0px 0px;
+    border-bottom: transparent 1px solid;
+}
+
+.dropdown #select:hover ~ .dropdownMenu {
+    border-color: var(--primary);
 }
 
 .dropdownMenu {
@@ -30,11 +37,13 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 0.5em 0;
     min-width: 180px;
-    height: 100%;
+    height: fit-content;
     /* prevent it from going off-screen */
     list-style: none;
     margin: 0;
     z-index: 100;
+    border: solid 1px #333;
+    transition: border 0.25s ease, color 0.25s ease;
 }
 
 .dropdownItem {
@@ -43,13 +52,14 @@
     justify-content: space-between;
     /* space between name and buttons */
     padding: 0em 1em;
+    min-height: 2em;
     height: 100%;
-    cursor: pointer;
     transition: background 0.2s;
 }
 
 .dropdownItem:hover {
-    background-color: #f0f0f0;
+    cursor: pointer;
+    color: var(--primary);
 }
 
 .dropdownItem #name {
