--- a/src/components/AppBar.css
+++ b/src/components/AppBar.css
@@ -2,8 +2,10 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     background-color: #131313;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 5px 20px;
+    z-index: 100;
 }
 
 #logo {
@@ -18,14 +20,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
-}
-
-.buttonBox {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-right: 1em;
+    justify-content:end;
+    margin-right: 1rem;
 }
 
 #project-input {
