--- a/src/components/AppBar.css
+++ b/src/components/AppBar.css
@@ -6,6 +6,7 @@
     background-color: #131313;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 5px 20px;
     z-index: 100;
+    height: 64px;
 }
 
 #logo {
