--- a/src/components/MotionCaptureLive/MotionCaptureLive.css
+++ b/src/components/MotionCaptureLive/MotionCaptureLive.css
@@ -44,7 +44,6 @@
   width: 60vh;
 }
 
-
 /* canvas directly on top of video */
 #camera-overlay canvas, #camera-overlay video, #camera-overlay img {
   position: absolute;
@@ -71,7 +70,8 @@
 
 .calibrate-overlay {
   position: absolute;
-  right: 2em;
+  margin-top: 1em;
+  right: 1em;
 }
 
 .calibrate-overlay button, .tpose-overlay button {
@@ -120,7 +120,8 @@
   position: absolute;
   display: flex;
   height: 10rem;
-  left: 2em;
+  margin-top: 1em;
+  left: 1em;
 }
 
 /* canvas directly on top of video */
@@ -131,4 +132,31 @@
   object-fit:cover;
   pointer-events: none; /* lets clicks pass through */
   border-radius: 16px;
+}
+
+#countdown-container {
+  position: absolute;
+  top: 45%;
+  width: 5em;
+  height: 5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #131313;
+  border: solid 2px #333;
+  font-size: 2em;
+  border-radius: 1rem;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+}
+
+#recording-frame {
+  position: absolute;
+  width: calc(100% - 4px);
+  height: calc(100% - 72px);
+  border: solid transparent 2px;
+  pointer-events: none;
+}
+
+#recording-frame.recording {
+  border: solid var(--primary) 2px;
 }
