--- a/src/components/MotionCaptureLive/MotionCaptureLive.css
+++ b/src/components/MotionCaptureLive/MotionCaptureLive.css
@@ -182,3 +182,22 @@
 #recording-frame.recording {
   border: solid var(--primary) 2px;
 }
+
+
+.no-camera-popup {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  backdrop-filter: blur(12px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  z-index: 9999; /* ensure it's on top of other elements */
+}
+
+.no-camera-popup div {
+  margin-bottom: 3rem;
+}
