--- a/src/components/AppBar.css
+++ b/src/components/AppBar.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background-color: #131313;
+    background-color: var(--background-color);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 5px 20px;
     z-index: 100;
     height: 64px;
@@ -23,9 +23,4 @@
     align-items: center;
     justify-content:end;
     margin-right: 1rem;
-}
-
-#project-input {
-    width: 50%;
-    max-width: 100%;
 }
