--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -1,29 +1,28 @@
 #timeline {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 5em;
-    z-index: 10;
-    display: flex;
-
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5em;
+  z-index: 10;
+  display: flex;
 }
 
 #timeline #bar {
-    width: 100%;
-    background-color: #131313;
-    border: solid 1px #333;
-    border-radius: 16px;
-    margin: 0.5em;
-    padding: 0.5em;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  background-color: #131313;
+  border: solid 1px #333;
+  border-radius: 16px;
+  margin: 0.5em;
+  padding: 0.5em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 #timeline input {
-    width: 3em;
+  width: 3em;
 }
 
 #scrollbar {
@@ -46,10 +45,10 @@
   height: 20px;
   background: var(--primary);
   border-radius: 3px;
-  pointer-events: none; /* so clicks pass through */
+  pointer-events: none;
   transition: left 0.025s linear;
 }
 
 .frameInfo {
-    user-select: none;
+  user-select: none;
 }
