--- a/src/components/Viewport.css
+++ b/src/components/Viewport.css
@@ -1,8 +1,7 @@
-/* src/components/Viewport.css */
 #viewport {
   width: 100%;
   height: 100%;
-  background: #111;
+  background: var(--viewport-background-color);
   display: flex;
 }
 
