--- a/src/index.css
+++ b/src/index.css
@@ -5,31 +5,37 @@
 
   color-scheme: dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #131313;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  --primary: #F54900; /* https://uicolors.app/tailwind-colors */
+  --primary: #F54900;
+  --background-color: #131313;
+  --viewport-background-color: #111;
+
+  background-color: var(--background-color);
 }
+
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+/* TEXT */
 
 a {
   text-decoration: none;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100dvh;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+
+/* BUTTONS */
 
 button {
   border: none;
@@ -43,19 +49,21 @@ button:hover {
   background-color: transparent;
   color: white;
   transition: color ease 0.2s;
-  display: flex;              /* use flexbox */
-  align-items: center;        /* vertical centering */
-  justify-content: center;    /* horizontal centering */
-  height: 36px;               /* button height */
-  width: 36px;                /* button width */
+  display: flex;              
+  align-items: center;
+  justify-content: center;  
+  height: 36px;
+  width: 36px;
   border: none;
-  border-radius: 4px;         /* optional rounded corners */
-  font-size: 18px;            /* icon size */
+  border-radius: 4px;
+  font-size: 18px;
 }
 
 .iconButton:hover {
     color: var(--primary);
 }
+
+/* INPUTS */
 
 input {
   background-color: #0A0A0A;
